Bug 146300 AX: AccessibilityObject focus events that don't cause a selection change can leave m_isSynchronizingSelection set to true https://bugs.webkit.org/show_bug.cgi?id=146300

Patch by Doug Russell <d_russell@apple.com> on 2015-06-25
Reviewed by Chris Fleizach.

Added a clearTextSelectionIntent() convenience function to be used after any
event that can, but isn't guaranteed to result in a selection change. Matches
calls to setTextSelectionIntent() convenience function.
Added support for tests listening for focus change notifications.

Source/WebCore:

Test: platform/mac/accessibility/focus-setting-selection-syncronizing-not-clearing.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::clearTextSelectionIntent):
(WebCore::AccessibilityRenderObject::setSelectedTextRange):
(WebCore::AccessibilityRenderObject::setFocused):
(WebCore::AccessibilityRenderObject::setSelectedVisiblePositionRange):
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::platformHandleFocusedUIElementChanged):

LayoutTests:

* platform/mac/accessibility/focus-setting-selection-syncronizing-not-clearing-expected.txt: Added.
* platform/mac/accessibility/focus-setting-selection-syncronizing-not-clearing.html: Added.

Canonical link: https://commits.webkit.org/164411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185974 268f45cc-cd09-0410-ab3c-d52691b4dbfc